Refactor test names and method variables